<resources>
    <string name="app_name">MonsterParty</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_age">Age</string>
    <string name="hint_tell_a_little_about_yourself">Tell a little about yourself</string>
    <string name="hint_password">Password</string>
    <string name="hint_repeat_password">Repeat Password</string>
    <string name="search">Search Users</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="welcome_to_monster_party">Welcome To Monster Party</string>
    <string name="log_out_as_username">Log out as</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="add_an_image">Add an Profile Picture?</string>
    <string name="create">create account</string>
    <string name="load">load</string>
    <string name="cancel">cancel</string>
    <string name="submit_post">submit post</string>
    <string name="password_rule">Your password should have a minimum of 8 characters and contain at least one number, one uppercase and one lowercase letter. You can use special characters.</string>
    <string name="new_create_an_account_here">New? Create an account here</string>
    <string name="login">login</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="clear_database">Clear Database</string>
    <string name="create_post">Create Post</string>

    <string-array name="lang_list">
        <item>Select a language</item>
        <item>English</item>
        <item>Spanish</item>
        <item>Japanese</item>
    </string-array>
</resources>