<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/up_et_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/hint_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:id="@+id/up_et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        app:layout_constraintTop_toBottomOf="@id/up_et_username"
        app:layout_constraintLeft_toLeftOf="@id/up_et_username"/>
    <EditText
        android:id="@+id/up_et_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/hint_age"
        app:layout_constraintTop_toBottomOf="@id/up_et_email"
        app:layout_constraintLeft_toLeftOf="@id/up_et_email"/>
    <Spinner
        android:id="@+id/up_spn_lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/lang_list"
        app:layout_constraintTop_toBottomOf="@id/up_et_age"
        app:layout_constraintLeft_toLeftOf="@id/up_et_age"/>

    <EditText
        android:id="@+id/up_et_desc"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:hint="@string/hint_tell_a_little_about_yourself"
        android:maxLength="200"
        android:singleLine="false"
        android:textAlignment="viewStart"
        app:layout_constraintLeft_toLeftOf="@id/up_spn_lang"
        app:layout_constraintTop_toBottomOf="@id/up_spn_lang" />
    <EditText
        android:id="@+id/up_et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        app:layout_constraintTop_toBottomOf="@id/up_et_desc"
        app:layout_constraintLeft_toLeftOf="@id/up_et_desc"/>
    <EditText
        android:id="@+id/up_et_password_match"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_repeat_password"
        app:layout_constraintTop_toBottomOf="@id/up_et_password"
        app:layout_constraintLeft_toLeftOf="@id/up_et_password"/>
    <Button
        android:id="@+id/up_btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        app:layout_constraintTop_toBottomOf="@id/up_et_password_match"
        app:layout_constraintLeft_toRightOf="@id/up_et_password_match"/>

</androidx.constraintlayout.widget.ConstraintLayout>