<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable
            name="userViewModel"
            type="com.example.monsterparty.viewmodel.UserViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/ca_et_username"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:background="@drawable/et_style"
        android:hint="@string/hint_username"
        android:text="@={userViewModel.createUserName}"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:id="@+id/ca_et_email"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:padding="10dp"
        android:background="@drawable/et_style"
        android:hint="@string/hint_email"
        android:text="@={userViewModel.createUserEmail}"
        app:layout_constraintTop_toBottomOf="@id/ca_et_username"
        app:layout_constraintLeft_toLeftOf="@id/ca_et_username"/>
    <EditText
        android:id="@+id/ca_et_age"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:padding="10dp"
        android:background="@drawable/et_style"
        android:inputType="number"
        android:hint="@string/hint_age"
        android:text="@={userViewModel.createUserAge}"
        app:layout_constraintTop_toBottomOf="@id/ca_et_email"
        app:layout_constraintLeft_toLeftOf="@id/ca_et_email"/>
    <Spinner
        android:id="@+id/ca_spn_lang"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/et_style"
        android:entries="@array/lang_list"
        app:layout_constraintTop_toBottomOf="@id/ca_et_age"
        app:layout_constraintLeft_toLeftOf="@id/ca_et_age"/>

    <EditText
        android:id="@+id/ca_et_desc"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:padding="10dp"
        android:background="@drawable/et_style"
        android:maxLength="200"
        android:singleLine="false"
        android:textAlignment="viewStart"
        android:hint="@string/hint_tell_a_little_about_yourself"
        android:text="@={userViewModel.createUserDesc}"
        app:layout_constraintLeft_toLeftOf="@id/ca_spn_lang"
        app:layout_constraintTop_toBottomOf="@id/ca_spn_lang" />
    <Button
        android:id="@+id/ca_btn_image_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load"
        android:onClick="getImage"
        app:layout_constraintTop_toBottomOf="@id/ca_et_desc"
        app:layout_constraintLeft_toLeftOf="@id/ca_et_desc"/>
    <ImageView
        android:id="@+id/ca_iv_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintLeft_toRightOf="@id/ca_btn_image_load"
        app:layout_constraintTop_toBottomOf="@id/ca_et_desc"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="getImage"
        tools:srcCompat="@tools:sample/avatars"/>
    <EditText
        android:id="@+id/ca_et_password"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/et_style"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:text="@={userViewModel.createUserPassword}"
        app:layout_constraintTop_toBottomOf="@id/ca_btn_image_load"
        app:layout_constraintLeft_toLeftOf="@id/ca_et_desc"/>
    <EditText
        android:id="@+id/ca_et_password_match"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/et_style"
        android:inputType="textPassword"
        android:hint="@string/hint_repeat_password"
        app:layout_constraintTop_toBottomOf="@id/ca_et_password"
        app:layout_constraintLeft_toLeftOf="@id/ca_et_password"/>
    <TextView
        android:id="@+id/ca_tv_password_rule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_rule"
        app:layout_constraintTop_toBottomOf="@id/ca_et_password_match"
        app:layout_constraintLeft_toLeftOf="@id/ca_et_password_match"/>
    <Button
        android:id="@+id/ca_btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/ca_tv_password_rule"
        app:layout_constraintLeft_toLeftOf="@id/ca_tv_password_rule"
        app:layout_constraintRight_toRightOf="@id/ca_tv_password_rule" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>