<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/cp_tv_post_text_title"
        android:layout_margin="20dp"
        android:text="@string/what_s_on_your_mind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:id="@+id/cp_et_post_text_box"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/cp_tv_post_text_title"/>
    <TextView
        android:id="@+id/cp_tv_post_image_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_an_image"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/cp_et_post_text_box"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <Button
        android:id="@+id/cp_btn_load_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load"
        app:layout_constraintTop_toBottomOf="@id/cp_tv_post_image_text"
        app:layout_constraintLeft_toLeftOf="@id/cp_tv_post_image_text"/>
    <Button
        android:id="@+id/cp_btn_submit_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/submit_post"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/cp_btn_load_image"/>

</androidx.constraintlayout.widget.ConstraintLayout>