<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/threemonsters">

    <TextView
        android:id="@+id/lg_tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:background="#66000000"
        android:fontFamily="serif"
        android:text="@string/welcome_to_monster_party"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lg_et_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/et_style"
        android:backgroundTint="#DDFFFFFF"
        android:hint="@string/enter_username"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="@id/lg_tv_welcome"
        app:layout_constraintRight_toRightOf="@id/lg_tv_welcome"
        app:layout_constraintTop_toBottomOf="@id/lg_tv_welcome" />

    <EditText
        android:id="@+id/lg_et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/et_style"
        android:backgroundTint="#DDFFFFFF"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#000000"
        app:layout_constraintLeft_toLeftOf="@id/lg_et_username"
        app:layout_constraintRight_toRightOf="@id/lg_et_username"
        app:layout_constraintTop_toBottomOf="@id/lg_et_username" />

    <Button
        android:id="@+id/lg_btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/login"
        app:layout_constraintLeft_toLeftOf="@id/lg_et_password"
        app:layout_constraintRight_toRightOf="@id/lg_et_password"
        app:layout_constraintTop_toBottomOf="@id/lg_et_password" />

    <Button
        android:id="@+id/lg_tv_create_account"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:backgroundTint="#01B0FF"
        android:contextClickable="false"
        android:onClick="openCreateAccount"
        android:text="@string/new_create_an_account_here"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintLeft_toLeftOf="@id/lg_btn_login"
        app:layout_constraintRight_toRightOf="@id/lg_btn_login"
        app:layout_constraintTop_toBottomOf="@id/lg_btn_login"
        app:rippleColor="#01B0FF" />

    <Button
        android:id="@+id/lg_btn_clear_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/clear_database"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>